# lxc_autoscaler

./: .dockerignore  DOCKER.md  Dockerfile  Makefile  POTENTIAL_GAPS.md  README.md  docker-compose.override.yml.example  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
examples/: config.yaml  minimal-config.yaml  production-config.yaml
lxc_autoscaler/: __init__.py
lxc_autoscaler/api/: __init__.py  exceptions.py  proxmox_client.py
lxc_autoscaler/config/: manager.py  models.py
lxc_autoscaler/core/: __init__.py  daemon.py  exceptions.py  validators.py
lxc_autoscaler/logging/: __init__.py  setup.py
lxc_autoscaler/metrics/: collector.py  models.py
lxc_autoscaler/scaling/: __init__.py  engine.py  models.py
scripts/: install.sh  uninstall.sh
systemd/: lxc-autoscaler-healthcheck.service  lxc-autoscaler.service  lxc-autoscaler.timer
systemd/tmpfiles.d/: lxc-autoscaler.conf
tests/: __init__.py  test_config.py  test_metrics.py  test_scaling.py  test_validators.py
